Updated background color

--- a/media/css/highlight.css
+++ b/media/css/highlight.css
@@ -1,4 +1,4 @@
-.highlight .hll { background-color: #ffffcc }
+.highlight .hll { background-color: #eff0f1 }
 .highlight  { background: #eff0f1; }
 .highlight .c { color: #408080; font-style: italic } /* Comment */
 .highlight .err { border: 1px solid #FF0000 } /* Error */
