--- a/_layouts/404.html
+++ b/_layouts/404.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Xianhua Zeng | 曾宪华</title>
-    <meta name="author" content="Xianhua Zeng | 曾宪华"/>
+    <title>Xianhua Zeng</title>
+    <meta name="author" content="Xianhua Zeng"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="/media/css/home.css">
     <style type="text/css">
@@ -42,7 +42,7 @@
   </head>
   <body>
     <div class="container">
-      <h1 class="sitename">Xianhua Zeng | 曾宪华</h1>
+      <h1 class="sitename">Xianhua Zeng</h1>
       <ul class="nav pills">
         <li><a href="/">Home</a></li>
         <li><a href="/cn/">Chinese</a></li>
@@ -50,7 +50,7 @@
       </ul>
       {{ content }}
       <footer>
-        <p><small>Powered by <a href="https://github.com/mojombo/jekyll">Jekyll</a> on GitHub | Copyright © 2015 - {{site.time | date:"%Y"}} by <a href="http://www.xianhuazeng.com/">Xianhua Zeng</a> | <span class="label label-info">{{site.time | date:"%Y-%m-%d %H:%M:%S"}}</span></small></p>
+        <p><small>Powered by <a href="https://github.com/mojombo/jekyll">Jekyll</a> on GitHub | Copyright 2015 - {{site.time | date:"%Y"}} by <a href="http://www.xianhuazeng.com/">Xianhua Zeng</a> | <span class="label label-info">{{site.time | date:"%Y-%m-%d %H:%M:%S"}}</span></small></p>
       </footer>
     </div>
   </body>
