--- a/media/css/style.css
+++ b/media/css/style.css
@@ -111,7 +111,7 @@ border: 1px solid rgba(1,1,1,0);
 color: #2e9afe;
 text-decoration: none;
 }
-
+code.has-jax {font: inherit; font-size: 100%; background: inherit; border: inherit;}
 .footnotes{font-size:12px;}
 .footnotes p{padding:.1em 0;}
 .footnotes li{padding:.1em 0;}
