--- a/media/css/style.css
+++ b/media/css/style.css
@@ -1,135 +1,99 @@
 /*------------------------------------
 * sext
 *
-* @author Danny Li (dannyli.net@gmail.com)
-* @link http://danny.li/
-* @update 2016-03-16
-
+* @author linghua.zhang@me.com
+* @link http://lhzhang.com/
+* @update 2011-12-20
+*
+* |/ | (~ (~
+* |\.|._)._)
 * --------------------------------- */
 
-
-
-/*@import url(http://fonts.googleapis.com/css?family=Galdeano);
+/*@import url(http://fonts.useso.com/css?family=Galdeano);
+@import url(http://fonts.useso.com/css?family=Electrolize);
+@import url(http://fonts.useso.com/css?family=Cuprum);*/
+@import url(http://fonts.googleapis.com/css?family=Galdeano);
 @import url(http://fonts.googleapis.com/css?family=Electrolize);
-@import url(http://fonts.googleapis.com/css?family=Cuprum);*/
-
-/* latin */
-@font-face {
-  font-family: 'Galdeano';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Galdeano Regular'), local('Galdeano-Regular'), url(/media/fonts/sNNdoZxHJuJuQ4ASrbgR4PesZW2xOQ-xsNqO47m55DA.woff2) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
-}
-
-/* latin */
-@font-face {
-  font-family: 'Electrolize';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Electrolize'), local('Electrolize-Regular'), url(/media/fonts/DDy9sgU2U7S4xAwH5thnJ44P5ICox8Kq3LLUNMylGO4.woff2) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
-}
-
-/* cyrillic */
-@font-face {
-  font-family: 'Cuprum';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Cuprum'), local('Cuprum-Regular'), url(/media/fonts/gJovVCIsuVHpE7lUT-5TYfesZW2xOQ-xsNqO47m55DA.woff2) format('woff2');
-  unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
-}
-/* latin-ext */
-@font-face {
-  font-family: 'Cuprum';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Cuprum'), local('Cuprum-Regular'), url(/media/fonts/TMj3tAAbnWTxQie9wLnZ2fesZW2xOQ-xsNqO47m55DA.woff2) format('woff2');
-  unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
-}
-/* latin */
-@font-face {
-  font-family: 'Cuprum';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Cuprum'), local('Cuprum-Regular'), url(/media/fonts/rZj40-VH1f1Wt0yg6Fkbcw.woff2) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
-}
-
-body{
-  font-size:14px;
-  word-spacing:1px;
-    margin-left:auto;
-  margin-right:auto;
-    font-family:"Galdeano","Hiragino Sans GB","Microsoft YaHei",Trebuchet,"Trebuchet MS",Tahoma,"Lucida Grande","Lucida Sans Unicode",Verdana,sans-serif;
-    color:#000000;
-    background-color:#ffffff;
-    /*background-image: url("/assets/images/wt.jpg");
-    background-attachment: fixed;
-    background-size: 100%;*/
-
-    }
+@import url(http://fonts.googleapis.com/css?family=Cuprum);
+body{font-size:14px;font-family:"Galdeano","Hiragino Sans GB","Microsoft YaHei",Trebuchet,"Trebuchet MS",Tahoma,"Lucida Grande","Lucida Sans Unicode",Verdana,sans-serif;color:#000000;background-color:#ffffff;}
 *{padding:0;margin: 0;border:none;outline:none;}
-a{color:#2e9afe;text-decoration:none;}
+a:link{color:#dd0000;text-decoration:none;}
 a:hover{color:#333333;text-decoration:underline;}
+a:visited {color:#93584D;}
 hr{margin:.7em 0;border-top:1px dashed #d0d0d0;border-bottom:1px dashed #f9f9f9;}
 p{padding:.5em 0;}
 li{padding:.2em 0;}
 ol,ul{list-style-position:inside;}
 ol ul, ul ol, ul ul, ol ol {margin-left:1em;}
-pre code{padding:3px;font-size:13px;line-height:1.6;display:block;overflow:auto;}
-
-code{background-color: #f0f0f0; font-family:"Courier New";}
-
-pre {
-border: 1px solid #ccc;
-font-family: Bitstream Vera Sans Mono,monospace;
-padding:5px;
-background-color: #f0f0f0;
--webkit-border-radius: 2px;
-    -khtml-border-radius: 2px;  
-    -moz-border-radius: 2px;
-    border-radius: 2px;
-}
-
-.highlight pre {border-top: 1px solid #ccc;
-border-bottom: 1px solid #ccc}
+pre code{margin:1em 0;font-size:13px;line-height:1.6;display:block;overflow:auto;}
 blockquote{display:block;text-align:justify;border-left:4px solid #eeeeee;}
 blockquote{margin:1em 0em;padding-left:1.5em;}
 blockquote p{margin:0;padding:.5em 0;}
-#container{width:600px;margin:2em auto;display:block;padding:1em 2em;background-color:#ffffff;}
+#container{width:600px;margin:2em auto;display:block;padding:0 2em;}
 .content{font-size:16px;line-height:24px;}
 .content h1{padding:.5em 0;}
 .content img{max-width:600px;display:block;margin:4px auto;-webkit-box-shadow:#999 1px 1px 4px;-moz-box-shadow:#999 1px 1px 4px;box-shadow:#999 1px 1px 4px;}
 #tag_cloud{margin-bottom: 1em;}
 #tag_cloud a:hover{color:#333333 !important;text-decoration:none;}
 .listing-item,.listing-seperator{list-style-type:none;}
-.listing-item a{
-    padding:.2em 1em;
-
-}
-
-h2 {margin-top:25px;}
-h3 {margin-top:10px;}
-
+.listing-item a{padding:.2em 1em;}
 .listing-item time{color:#999999;}
 .listing-seperator{font-weight:bold;}
 .meta{text-align:right;font-size:12px;}
-.pageNav{font-weight:bold;font-size:17px;}
-.pageNavInvalid{font-weight:bold;font-size:17px;color:#D0D0D0;}
 header{padding:.5em 0;border-bottom: 1px solid #cccccc;}
-nav{font-family:"Electrolize",sans-serif;font-size:1.1em;text-transform:uppercase;float:left;margin-left:-12em;width:9em;text-align:right}
+nav{font-family:"Electrolize",sans-serif;font-size:1.1em;text-transform:uppercase;float:left;margin-left:-12em;width:9em;text-align:right;}
 nav a{display:block;padding:.7em 1em;color:#000000;}
-nav a:hover{background-color:#2e9afe;text-decoration:none;color:#f9f9f9;-webkit-transition:color .5s linear;}
+nav a:hover{background-color:#ff0000;text-decoration:none;color:#f9f9f9;-webkit-transition:color .2s linear;}
 .post{padding:.5em 0em;}
 h1{font-family:"Cuprum","Hiragino Sans GB","Microsoft YaHei",sans-serif;font-size:1.6em;color:#000;}
 h2{font-family:"Cuprum","Hiragino Sans GB","Microsoft YaHei",sans-serif;font-size:1.4em;color:#111;}
 h3{font-family:"Cuprum","Hiragino Sans GB","Microsoft YaHei",sans-serif;font-size:1.2em;color:#222;}
 h4{font-family:"Cuprum","Hiragino Sans GB","Microsoft YaHei",sans-serif;font-size:1em;color:#333;}
-pre,code{font-family:Menlo,"Andale Mono",Consolas,"Courier New",Monaco
-code{background-color:transparent;},monospace;font-size:13px;}
+pre,code{font-family:Menlo,"Andale Mono",Consolas,"Courier New",Monaco,monospace;font-size:13px;}
+code{background-color:#eff0f1;}
 embed,object,iframe{display:block;margin:4px auto;}
 .gist{font-size: 12px;line-height:1.6;}
+@media print {
+  *{font-weight:normal;}
+  h1,h2,h3{font-weight:400;}
+  a{color:black;border-bottom:lightgray dotted 1px;}
+}
+#message a {
+    /* display: block before hiding */
+    display: block;
+    display: none;
+
+    /* link is above all other elements */
+    z-index: 999; 
+
+    /* link doesn't hide text behind it */
+    opacity: .8;
+
+    /* link stays at same place on page */
+    position: fixed;
+
+    /* link goes at the bottom of the page */
+    top: 100%;
+    margin-top: -80px; /* = height + preferred bottom margin */
+
+    /* link is centered */
+    left: 95%;
+    margin-left: 0px; /* = half of width */
+
+    /* round the corners (to your preference) */
+    -moz-border-radius: 0px;
+    -webkit-border-radius: 0px;
+
+    /* make it big and easy to see (size, style to preferences) */
+    width: px;
+    line-height: px;
+    height: 20px;
+    padding: 5px;
+    background-color: #000;
+    font-size: 40px;
+    text-align: -webkit-center;
+    color: #fff;
+}
 
 footer{
 display:block;
@@ -144,91 +108,9 @@ color: #999;
 footer a {
 margin: 1px;
 border: 1px solid rgba(1,1,1,0);
-border-bottom: 1px dashed #BBB;
 color: #2e9afe;
 text-decoration: none;
 }
-
-footer a:hover {
-    color: rgba(250,250,250,1.0) !important; 
-    -webkit-border-radius: 4px;
-    border: 1px solid rgba(0,0,0,0.45);
-    text-shadow: rgba(0,0,0,0.6) 0px -1px 0px;
-    background: -webkit-gradient(linear, left top, left bottom, from(rgba(110,110,110,1.0)), to(rgba(100,100,100,1.0)));
-    -webkit-box-shadow: rgba(0,0,0,1.0) 0px 0px 2px,rgba(255,255,255,0.15) 0px 1px 1px inset;
-    text-decoration: none;
-}
-
-.label {
-font-size:11.25px;
-font-weight:700;
-color:#fff;
-text-transform:uppercase;
-background-color:#999;
--webkit-border-radius:3px;
--moz-border-radius:3px;
-border-radius:3px;
-padding:1px 3px 2px;
-}
-
-.label-important {
-background-color:#b94a48;
-}
-
-.label-warning {
-background-color:#f89406;
-}
-
-.label-success {
-background-color:#468847;
-}
-
-.label-info {
-background-color:#3a87ad;
-}
-
-.paginator {
-font: 14px Arial,Helvetica,sans-serif;
-color: #AAA;
-margin: 20px 0;
-line-height: 150%;
-display: block;
-}
-
-.paginator a,.paginator span{
-padding: 0 4px;
-margin: 2px;
-text-decoration: none;
-}
-
-.paginator .current-page {
-color: white;
-background: #2e9afe;
-}
-
-.paginator a:hover{
-color: white;
-background: #83BF73;
-}
-
-#ds-thread #ds-reset .ds-highlight{color: #2e9afe !important;}
-#ds-reset .ds-sort a:active {color: #2e9afe;}
-#ds-thread #ds-reset a.ds-comment-context:hover{color:#2e9afe;}
-#ds-thread #ds-reset #ds-bubble a:hover{color:#2e9afe;}
-#ds-thread #ds-reset .ds-post-liked a.ds-post-likes{color:#2e9afe;}
-#ds-thread #ds-reset .ds-paginator a.ds-current{color:#2e9afe;}
-#ds-wrapper #ds-reset .ds-unread-list li a{color:#2e9afe;}
-#ds-notify #ds-reset ul.ds-notify-unread li a{color:#2e9afe;}
-#ds-reset .ds-highlight{color:#2e9afe !important;}
-#ds-reset #ds-ctx .ds-ctx-entry .ds-ctx-head a:hover{color:#2e9afe;}
-#ds-thread #ds-reset .ds-login-buttons .ds-more-services{color:#2e9afe !important;}
-#ds-thread #ds-reset a.ds-unread-comments-count{background-color:#2e9afe;}
-#ds-thread #ds-reset .ds-sort a.ds-current, #ds-thread #ds-reset .ds-sort a:active{color:#2e9afe !important;}
-#ds-thread #ds-reset a.ds-comment-context{color:#2e9afe !important;}
-#ds-thread #ds-reset .ds-login-buttons .ds-more-services{color:#2e9afe !important;}
-#ds-reset .ds-highlight{color:#2e9afe  !important;}
-#ds-thread #ds-reset #ds-bubble a{color:#2e9afe  !important;}
-
 code.has-jax {font: inherit; font-size: 100%; background: inherit; border: inherit;}
 .footnotes{font-size:12px;}
 .footnotes p{padding:.1em 0;}
