--- a/media/css/style.css
+++ b/media/css/style.css
@@ -53,8 +53,6 @@ pre,code{font-family:Menlo,"Andale Mono",Consolas,"Courier New",Monaco,monospace
 code{background-color:#eff0f1;}
 embed,object,iframe{display:block;margin:4px auto;}
 .gist{font-size: 12px;line-height:1.6;}
-footer{display:block;}
-footer small {font-size: 13px;color: #999;}
 @media print {
   *{font-weight:normal;}
   h1,h2,h3{font-weight:400;}
@@ -96,3 +94,4 @@ footer small {font-size: 13px;color: #999;}
     text-align: -webkit-center;
     color: #fff;
 }
+footer small {clear: both;font-size: 13px;color: #999;border-top: 1px solid #999;}
