--- a/media/css/style.css
+++ b/media/css/style.css
@@ -94,4 +94,4 @@ embed,object,iframe{display:block;margin:4px auto;}
     text-align: -webkit-center;
     color: #fff;
 }
-footer small {clear: both;font-size: 13px;color: #999;border-top: 1px solid #999;}
+footer small {font-size: 13px;color: #999;border-top: 1px solid #999;}
