Updated footer style

--- a/media/css/style.css
+++ b/media/css/style.css
@@ -95,4 +95,4 @@ embed,object,iframe{display:block;margin:4px auto;}
     color: #fff;
 }
 footer{font-size: 13px; color: #999;}
-footer .copyright{border-top: 1px solid #ddd;text-align:center;}
+footer .copyright{border-top: 1px solid #cccccc;text-align:center;}
