Updated footer margin

--- a/media/css/style.css
+++ b/media/css/style.css
@@ -95,5 +95,5 @@ embed,object,iframe{display:block;margin:4px auto;}
     text-align: -webkit-center;
     color: #fff;
 }
-footer{margin: 2em auto;font-size: 13px; color: #999;}
+footer{margin: .7em auto;font-size: 13px; color: #999;}
 footer .copyright{border-top: 1px solid #cccccc;text-align:center;}
