--- a/media/css/style.css
+++ b/media/css/style.css
@@ -15,7 +15,7 @@
 @import url(http://fonts.googleapis.com/css?family=Galdeano);
 @import url(http://fonts.googleapis.com/css?family=Electrolize);
 @import url(http://fonts.googleapis.com/css?family=Cuprum);*/
-/*Download font*/
+/*Loading font*/
 /* latin */
 @font-face {
     font-family: 'Galdeano';
